spacing fixed

--- a/src/styles/Blogs.css
+++ b/src/styles/Blogs.css
@@ -22,7 +22,8 @@
   font-weight: 600;
   color: var(--text-color);
   letter-spacing: 1px;
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .line-title {
@@ -56,6 +57,7 @@
   position: relative;
   transition: all 0.4s ease-in-out;
   cursor: pointer;
+  padding-bottom: 12px;
 }
 
 [data-theme="dark"] .item{
@@ -147,7 +149,7 @@
   overflow-x: auto;
   gap: 15px;
   scroll-behavior: smooth; 
-  padding: 10px 0;
+  /* padding: 10px 0; */
   scrollbar-width: thin; 
   scrollbar-color: #ccc transparent; 
 }
