--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -39,7 +39,7 @@
   
   
   .nav {
-    padding: 20px 20px;
+    padding: 0px 20px;
     color: var(--text-color);
     margin: 0 10px;
     text-align: center;
