--- a/src/styles/Testimonial.css
+++ b/src/styles/Testimonial.css
@@ -29,7 +29,7 @@
   /* text-transform: uppercase; */
   letter-spacing: 1px;
   max-width: 800px;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 40px;
 }
 
